fixed leaderboard loading too much

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,6 +32,7 @@
 .footer {
     display: flex;
     flex-direction: row;
+    padding-top: 10px;
  }
 
  .isSelected{
