--- a/src/app/livewell/catch-item/catch-item.component.css
+++ b/src/app/livewell/catch-item/catch-item.component.css
@@ -11,6 +11,5 @@ mat-card img{
 
 .fishCard{
     padding-left: 10px;
-    padding-bottom: 10px;
     max-width: 300px;
 }
